# quant-lab

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  IMPROVEMENTS.md  Makefile  PRODUCT.md  README.md  docker-compose.yml  netlify.toml  render.yaml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/showcase-site/: README.md  index.html  package-lock.json  package.json  vite.config.js
apps/showcase-site/src/: main.js  projects.js  style.css
cpp/order-book/: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
cpp/order-book/.github/workflows/: ci.yml
cpp/order-book/benchmarks/: bench.cpp  bench.py
cpp/order-book/include/: matching_engine.h  order.h  order_book.h  trade.h
cpp/order-book/python/: abides_lite.py  requirements.txt  simulator.py  visualizer.py
cpp/order-book/python/orderbook/: __init__.py  features.py
cpp/order-book/src/: bindings.cpp  main.cpp  matching_engine.cpp  order_book.cpp
cpp/order-book/tests/: conftest.py  test_abides_extensions.py  test_abides_lite.py  test_features.py  test_order_book.cpp  test_orderbook.py  test_python_viz.py  test_simulator_engine.py
docker/: backtesting.Dockerfile  options-pricing.Dockerfile  portfolio-api.Dockerfile
docs/: getting-started.md
docs/methods/: README.md  avellaneda-stoikov-market-making.md  market-microstructure-features.md  probabilistic-and-deflated-sharpe.md  robust-covariance-and-risk-attribution.md  sabr-and-finite-difference.md
scripts/: bootstrap.sh
